fixed bug with horizontal scroll

--- a/client/src/pages/FigurePage/figure-page.less
+++ b/client/src/pages/FigurePage/figure-page.less
@@ -146,6 +146,7 @@
 }
 
 .figure-history {
+    overflow: hidden;
     background: @black;
     margin-top: 100px;
     position: relative;
@@ -207,6 +208,7 @@
         padding: 0 15px;
         margin-top: 50px;
         margin-bottom: -75px;
+        overflow: visible;
         .line {
             display: none;
         }
@@ -228,7 +230,6 @@
     }
     .figure-about {
         &-content {
-            // margin: 0 -15px;
             &__text {
                 padding: 0 5px 0 15px;
                 margin-right: 10px;
